update Dockerfile to use patched kernel.json